--- a/templates/registration/profile.html
+++ b/templates/registration/profile.html
@@ -5,6 +5,8 @@
     <title>Title</title>
 </head>
 <body>
-{{ username }}
+{{ player }} <br><br>
+
+<a href="{% url 'games' %}">Join game</a>
 </body>
 </html>
