--- a/templates/game/addgame.html
+++ b/templates/game/addgame.html
@@ -7,7 +7,8 @@
 <body>
     <form action="{% url 'add' %}" method="post">
         {% csrf_token %}
-        <input type="text" name="name" required>
+        <input type="text" name="name" required placeholder="Title">
+        <input type="number" name="quantity" required value="2" placeholder="Quantity">
 
         <input type="submit" value="Create game">
     </form>
