--- a/templates/play/play.html
+++ b/templates/play/play.html
@@ -19,9 +19,22 @@
                 image.src = url;
                 var x = '{{ ship.x }}', y = '{{ ship.y }}';
                 var speed = '{{ ship.speed }}', angle = '{{ ship.angle }}';
-                var racing = '{{ ship.racing }}', rotate = '{{ ship.rotate }}';
+                var racing = '{{ ship.racing }}', rotate = '{{ ship.rotate }}', braking = '{{ ship.braking }}';
 
-                var s = new Ship(parseInt(id), image, parseFloat(racing), parseFloat(speed), parseFloat(rotate), parseFloat(angle), parseFloat(x), parseFloat(y));
+                var weapons = [];
+
+                {% for weapon in ship.weapons.all %}
+                    var w_id = '{{ weapon.id }}';
+                    var w_url = '{{ weapon.image.url }}';
+                    var w_image = document.createElement("IMG");
+                    w_image.src = w_url;
+                    var w_title = '{{ weapon.title }}';
+
+                    var w = new Weapon(parseInt(w_id), w_image, w_title);
+                    weapons.push(w);
+                {% endfor %}
+
+                var s = new Ship(parseInt(id), image, parseFloat(racing), parseFloat(braking), parseFloat(speed), parseFloat(rotate), parseFloat(angle), parseFloat(x), parseFloat(y), weapons);
                 ships.push(s);
             {% endfor %}
 
@@ -40,9 +53,6 @@
 </head>
 
 <body onload="f()">
-
-    {{ player }} <br>
-    {{ player.ships.first }} <br>
 
     <canvas id="myCanvas" width="1300" height="550" style="border:1px solid #d3d3d3; width:100%;height:50%">
 
