static objects added

--- a/templates/game/game.html
+++ b/templates/game/game.html
@@ -25,10 +25,10 @@
     <form action="{% url 'start' game.id %}" method="post">
         {% csrf_token %}
 
-        {% if game.players.first == player and game.players.get_queryset.count == game.quantity%}
+        {% if game.players.first == player and game.players.get_queryset.count == game.quantity and not game.finished %}
             <input type="submit" value="Start game">
         {% else %}
-            {% if game.started %}
+            {% if game.started and not game.finished%}
                 {% for p in game.players.all %}
                     {% if p.id == player.id %}
                         <input type="submit" value="Start game">
@@ -37,6 +37,22 @@
             {% else %}
                 <input type="submit" value="Start game" disabled>
             {% endif %}
+        {% endif %}
+    </form>
+
+    <form action="{% url 'finish' game.id %}" method="post">
+        {% csrf_token %}
+
+        {% if game.players.first == player %}
+
+            {% if game.started and not game.finished %}
+                <input type="submit" value="Finish game">
+            {% else %}
+                <input type="submit" value="Finish game" disabled>
+            {% endif %}
+
+        {% else %}
+
         {% endif %}
     </form>
 </body>
