--- a/templates/index.html
+++ b/templates/index.html
@@ -1,13 +1,8 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-<a href="{% url 'login' %}">Login</a> <br>
-<a href='accounts/logout'>Logout</a> <br>
-<a href="{% url 'profile' %}">Profile</a> <br>
-</body>
-</html>
+{% extends 'base.html' %}
+
+{% block main %}
+
+
+
+{% endblock %}
+
