--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,18 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Welcome</title>
-</head>
-<body>
+{% extends 'base.html' %}
 
-    <form method="post">
+{% block main %}
+
+    <form method="post" class="login">
         {% csrf_token %}
-        <input type="text" name="username" placeholder="Login" required autofocus>
-        <input type="password" name="password" placeholder="Password" required>
+        <input type="text" name="username" placeholder="Login" required autofocus> <br/>
+        <input type="password" name="password" placeholder="Password" required> <br/>
 
-        <button type="submit">Sign in</button>
+        <input type="submit" name="sub" value="Login" style="width: 100px; height: 30px; margin-left: 100px;"><br/>
     </form>
 
-</body>
-</html>
+{% endblock %}
