--- a/templates/layout/header.html
+++ b/templates/layout/header.html
@@ -66,6 +66,10 @@
             <a href="{% url 'profile' %}">Profile</a>
         </li>
 
+        <li class="nav-item">
+            <a href="{% url 'games' %}">Play</a>
+        </li>
+
     </ul>
   </div>
 </nav>
