--- a/templates/layout/header.html
+++ b/templates/layout/header.html
@@ -70,6 +70,10 @@
             <a href="{% url 'games' %}">Play</a>
         </li>
 
+        <li class="nav-item">
+            <a href="{% url 'shop' %}">Shop</a>
+        </li>
+
     </ul>
   </div>
 </nav>
