--- a/templates/registration/profile.html
+++ b/templates/registration/profile.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-    {{ player }} <br><br>
-</body>
-</html>
+{% extends 'base.html' %}
+
+{% block main %}
+
+    {{ player }}
+
+    <p>Money: {{ player.money }}</p>
+
+{% endblock %}
