--- a/templates/game/games.html
+++ b/templates/game/games.html
@@ -12,7 +12,7 @@
             <li>
                 <a href="/games/{{ game.id }}"> <p>Title: {{ game.title }}</p> </a>
                 <img src="{{ game.map.image.url }}" width="100" height="50" align="left">
-                <p>Map: {{ game.map.title }} <br> Creator: {{ game.players.first }}</p>
+                <p> Map: {{ game.map.title }} <br> Creator: {{ game.players.first }} <br> Frags: {{ game.max_frags }}</p>
 
             </li>
         {% endif %}
