--- a/templates/layout/header.html
+++ b/templates/layout/header.html
@@ -25,12 +25,11 @@
  		text-decoration: none;
  		font-size: 18px;
 	}
-	a:hover{
-		color: white !important;
-		font-size: 20px;
-		transition: all 1s;
- 		text-decoration: none;
-	}
+	{#a:hover{#}
+	{#	color: white !important;#}
+	{#	font-size: 20px;#}
+	{#	transition: all 1s;#}
+ 	{#	text-decoration: none;}#}
         #stickly_sidebar{
             top: 67px;
             position: fixed;
