--- a/templates/play/play.html
+++ b/templates/play/play.html
@@ -175,7 +175,7 @@
 
 </head>
 
-<body onload="f()">
+<body onload="f()" bgcolor="#696969">
 
     <canvas id="myCanvas" width="1300" height="550" style="border:1px solid #d3d3d3; width:100%;height:50%">
 
